--- a/source-css/cianimotes.css
+++ b/source-css/cianimotes.css
@@ -1,3 +1,9 @@
+a[href|="/itsfine"] { display: block; clear: none; float: left; background-image: url(%%everythingisfine%%); width: 240px; height: 150px; background-position: -0px -0px }
+
+a[href|="/ppchew"] { display: block; clear: none; float: left; background-image: url(%%ppchew%%); width: 122px; height: 150px; background-position: -0px -0px }
+
+a[href|="/kissit"] { display: block; clear: none; float: left; background-image: url(%%kissit%%); width: 149px; height: 150px; background-position: -0px -0px }
+
 a[href|="/nopls"] { display: block; clear: none; float: left; background-image: url(%%nopls%%); width: 188px; height: 200px; background-position: -0px -0px }
 
 a[href|="/taviplay"] { display: block; clear: none; float: left; background-image: url(%%taviplay%%); width: 101px; height: 120px; background-position: -0px -0px }
